gccida/c1/emit_case_nodes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6467:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6468:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *code_label; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6487:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6489:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6526:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v67; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v68; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6530:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v71; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6531:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v72; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6539:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+14h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6540:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode oldmode; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6541:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *oldmodea; // [rsp+20h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6544:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v87; // [rsp+38h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6545:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v88; // [rsp+40h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6590:28: error: use of undeclared identifier 'machine_mode'
v56 = convert_modes( v7, ( machine_mode)v11, v55, v10); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6597:28: error: use of undeclared identifier 'machine_mode'
v49 = convert_modes( v7, ( machine_mode)v11, v48, v10); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6606:28: error: use of undeclared identifier 'machine_mode'
v42 = convert_modes( v7, ( machine_mode)v11, v41, v10); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6610:28: error: use of undeclared identifier 'machine_mode'
v44 = convert_modes( v7, ( machine_mode)v11, v43, v10); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/stmt.c:6621:28: error: use of undeclared identifier 'machine_mode'
v75 = convert_modes( v7, ( machine_mode)v11, v74, v10); 
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_case_nodes/src/obj/stmt.o] Error 1
